Add one more movie in the landing page

--- a/templates/main.html
+++ b/templates/main.html
@@ -19,6 +19,7 @@
       Burnt by the Sun: <input type=text name="movie3" placeholder="0-5"><br>
       Pulp Fiction: <input type=text name="movie4" placeholder="0-5"><br>
       Triangle of Sadness: <input type=text name="movie5" placeholder="0-5"><br>
+      A ghost movie: <input type=text name="movie6" placeholder="0-5"><br>
       <p><input type="submit"></p>
     </form>
 
